<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgAppLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/app_logo_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:src="@drawable/text_login"
        android:layout_below="@+id/imgAppLogo"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txtEnterDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/please_enter_the_details_below_to_continue"
        android:layout_below="@+id/imgLogin"
        android:layout_marginTop="5dp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEnterEmail"
        android:layout_width="match_parent"
        app:helperText="*Required"
        app:counterEnabled="true"
        app:helperTextTextColor="#FF0000"
        app:counterMaxLength="30"
        app:helperTextEnabled="true"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEnterDetails"
        android:layout_marginTop="15dp">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/enter_email_address"
        android:background="@drawable/style_rounded_corner"
        android:backgroundTint="#d3d3d3"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="10dp"
        android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEnterPassword"
        android:layout_width="match_parent"
        app:helperText="*Required"
        app:counterEnabled="true"
        app:helperTextTextColor="#FF0000"
        app:counterMaxLength="16"
        app:helperTextEnabled="true"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEnterEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/enter_password"
            android:backgroundTint="#d3d3d3"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/style_rounded_corner"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cbRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEnterPassword"
        android:text="@string/remember_me"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEnterPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/forgot_password"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/txtForgotPassword"
        android:layout_marginTop="25dp"
        android:background="@drawable/style_rounded_corner">
    </Button>

    <TextView
        android:id="@+id/txtDontHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="17dp"
        android:layout_marginStart="95dp" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:layout_below="@id/btnLogin"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="95dp"
        android:layout_marginTop="15dp"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/imgfbLogo"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:src="@drawable/fb_logo"
        android:layout_below="@+id/txtDontHaveAnAccount"
        android:layout_marginStart="145dp"
        android:layout_marginTop="20dp" />

    <ImageView
        android:id="@+id/imgGoogleLogo"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:src="@drawable/google_logo"
        android:layout_below="@+id/txtDontHaveAnAccount"
        android:layout_marginEnd="145dp"
        android:layout_marginTop="22dp"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
